# dark-mode-cli

./: Cargo.toml  README.md
.github/workflows/: macOS.yml  rust-clippy.yml  windows.yml
src/: lib.rs  macos.rs  main.rs  utils.rs  windows.rs
