[package]
name = "dark-mode"
description = "Controls dark mode from the terminal"
authors = ["Allister Isaiah Harvey <isaiahharvey1998@outlook.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
