[package]
name = "dark-mode"
description = "Controls dark mode from the terminal"
authors = ["Allister Isaiah Harvey <isaiahharvey1998@outlook.com>"]
version = "1.0.0"
license = "MIT"
readme = "README.md"
repository = "https://github.com/a-isaiahharvey/dark-mode-cli"
keywords = ["dark-mode", "windows", "cli", "terminal", "macos"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.23", features = ["derive"] }

[target.'cfg(target_os = "windows")'.dependencies]
registry = "1.2.3"
